--- a/package.json
+++ b/package.json
@@ -5,18 +5,27 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "npm run build && npm run export && next start",
     "lint": "next lint --fix",
     "export": "next export",
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@mapbox/mapbox-gl-language": "^1.0.0",
     "chart.js": "^3.7.1",
+    "country-code-lookup": "^0.0.20",
     "fzo": "^0.1.3",
+    "highcharts": "^10.0.0",
+    "highcharts-react-official": "^3.1.0",
+    "jotai": "^1.6.6",
+    "mapbox-gl": "^2.8.2",
     "next": "12.1.5",
+    "node-sass": "^7.0.1",
     "react": "18.0.0",
     "react-chartjs-2": "^4.1.0",
-    "react-dom": "18.0.0"
+    "react-dom": "18.0.0",
+    "redux": "^4.2.0",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^12.1.5",
