--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,9 +11,7 @@
     "ecmaVersion": 6,
     "sourceType": "module"
   },
-  "plugins": [
-    "react"
-  ],
+  "plugins": ["react"],
   "env": {
     "browser": true,
     "node": true,
