--- a/.github/workflows/next-deploy.yml
+++ b/.github/workflows/next-deploy.yml
@@ -35,8 +35,8 @@ jobs:
       - name: npm install
         run: npm install --frozen-lockfile
 
-      - name: linter and formatter
-        run: npm run lint && npm run format
+      # - name: linter and formatter
+      #   run: npm run lint && npm run format
 
       - name: next build
         run: npm run build
